[gd_scene load_steps=32 format=3 uid="uid://c0d721vnr0c8b"]

[ext_resource type="Script" path="res://boss_fight_1.gd" id="1_vawgb"]
[ext_resource type="Resource" uid="uid://c7cudaxknyfql" path="res://Boss.tres" id="2_s0e3s"]
[ext_resource type="Texture2D" uid="uid://du3bf0mejye88" path="res://boss_bg.jpg" id="3_qma7t"]
[ext_resource type="AudioStream" uid="uid://8lsod84bvvrn" path="res://Boss battle.mp3" id="3_qxhim"]
[ext_resource type="AudioStream" uid="uid://dxearjv2mdouf" path="res://ding_a.mp3" id="4_imvgg"]
[ext_resource type="FontFile" uid="uid://da1qdy405mw0s" path="res://slkscr.ttf" id="5_r4iv8"]
[ext_resource type="Texture2D" uid="uid://d0oojqmg22plk" path="res://boss_normal-removebg-preview.png" id="6_s1qp2"]
[ext_resource type="Texture2D" uid="uid://woyop4nkqhwy" path="res://boss_attack-removebg-preview.png" id="7_ct8vw"]
[ext_resource type="Texture2D" uid="uid://b81pqnawj35ne" path="res://boss_eat_apple-removebg-preview.png" id="8_38ayc"]
[ext_resource type="FontFile" uid="uid://cn8120chtc6ds" path="res://slkscre.ttf" id="8_5363d"]
[ext_resource type="Texture2D" uid="uid://0diqfcw0ijw2" path="res://boss_gfire_glow-removebg-preview.png" id="9_3jklo"]
[ext_resource type="FontFile" uid="uid://dx3ef33xdewy4" path="res://slkscreb.ttf" id="9_ps0do"]
[ext_resource type="Texture2D" uid="uid://bdyvapqi5g82s" path="res://boss_rfire_glow-removebg-preview.png" id="10_28p8u"]
[ext_resource type="Texture2D" uid="uid://bd12v1tafct7i" path="res://Killed_the_boss-removebg-preview.png" id="14_mstku"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s7847"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_63idb"]
bg_color = Color(0, 1, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_q8tl7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_s1qp2")
}, {
"duration": 1.0,
"texture": ExtResource("7_ct8vw")
}, {
"duration": 1.0,
"texture": ExtResource("7_ct8vw")
}, {
"duration": 1.0,
"texture": ExtResource("6_s1qp2")
}],
"loop": false,
"name": &"attack",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_s1qp2")
}],
"loop": false,
"name": &"enter",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_s1qp2")
}, {
"duration": 1.0,
"texture": ExtResource("8_38ayc")
}, {
"duration": 1.0,
"texture": ExtResource("6_s1qp2")
}],
"loop": false,
"name": &"get_attack",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sej4s"]
bg_color = Color(0, 0, 0, 0.639216)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kfp7s"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kdx43"]
bg_color = Color(0, 1, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_to5ra"]
bg_color = Color(0, 0, 0, 0.639216)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ma276"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k3l8n"]
bg_color = Color(0.745098, 0.745098, 0.745098, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exeq4"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7s8jd"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="Animation" id="Animation_rt1np"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeContainer/Slime:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlimeContainer/Slime:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SlimeContainer/GreenFire:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.33, 1.24755)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SlimeContainer/RedFire:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.353, 1.26913)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SlimeContainer/RedFire:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SlimeContainer/GreenFire:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_35dco"]
resource_name = "mini_shake"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5, 0.7, 1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-56, 96), Vector2(192, 24), Vector2(-8, 8), Vector2(17.8, 1), Vector2(0, 0), Vector2(-5, -1)]
}

[sub_resource type="Animation" id="Animation_6sg24"]
resource_name = "shake"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-56, 96), Vector2(-128, -32), Vector2(192, 24), Vector2(20, -1), Vector2(-8, 8), Vector2(168, -40), Vector2(17.8, 1), Vector2(48, 88), Vector2(29, 1), Vector2(0, 0), Vector2(-5, -1)]
}

[sub_resource type="Animation" id="Animation_a1q2u"]
resource_name = "slime_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeContainer/GreenFire:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.4468, 1.17698), Vector2(3.4672, 2.82059)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlimeContainer/RedFire:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.41586, 1.29837), Vector2(3.29145, 3.01833)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SlimeContainer/RedFire:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SlimeContainer/GreenFire:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fabhl"]
resource_name = "slime_die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeContainer/Slime:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s3ow2"]
_data = {
"RESET": SubResource("Animation_rt1np"),
"mini_shake": SubResource("Animation_35dco"),
"shake": SubResource("Animation_6sg24"),
"slime_attack": SubResource("Animation_a1q2u"),
"slime_die": SubResource("Animation_fabhl")
}

[node name="BossFight" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vawgb")
slime = ExtResource("2_s0e3s")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(626, 363.262)
scale = Vector2(1.31392, 1.31392)
stream = ExtResource("3_qxhim")
autoplay = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
position = Vector2(253.718, 456.693)
scale = Vector2(0.34309, 0.34309)
stream = ExtResource("4_imvgg")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("3_qma7t")

[node name="SlimeContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 344.0
offset_top = 80.0
offset_right = 777.0
offset_bottom = 692.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="SlimeContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_s7847")
theme_override_styles/fill = SubResource("StyleBoxFlat_63idb")
step = 1.0
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="SlimeContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 1
theme_override_fonts/font = ExtResource("5_r4iv8")
text = "Hp: 50/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Boss" type="AnimatedSprite2D" parent="SlimeContainer"]
position = Vector2(282, 283.262)
scale = Vector2(1.31392, 1.31392)
sprite_frames = SubResource("SpriteFrames_q8tl7")
animation = &"attack"

[node name="GreenFire" type="Sprite2D" parent="SlimeContainer"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(607, 63)
scale = Vector2(1.33, 1.24755)
texture = ExtResource("9_3jklo")

[node name="RedFire" type="Sprite2D" parent="SlimeContainer"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(-62.9999, 228)
scale = Vector2(1.353, 1.26913)
texture = ExtResource("10_28p8u")

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 0
offset_top = 552.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_sej4s")

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_right = -24.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_r4iv8")
theme_override_font_sizes/font_size = 30
text = "Player"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_kfp7s")
theme_override_styles/fill = SubResource("StyleBoxFlat_kdx43")
step = 1.0
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 1
theme_override_fonts/font = ExtResource("5_r4iv8")
text = "Hp: 50/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_right = 1152.0
offset_bottom = 96.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_to5ra")

[node name="Actions" type="HBoxContainer" parent="ActionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 16.0
offset_right = -24.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="A" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_r4iv8")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_ma276")
theme_override_styles/hover = SubResource("StyleBoxFlat_k3l8n")
theme_override_styles/pressed = SubResource("StyleBoxFlat_exeq4")
text = "A"

[node name="B" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_r4iv8")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_ma276")
theme_override_styles/hover = SubResource("StyleBoxFlat_k3l8n")
theme_override_styles/pressed = SubResource("StyleBoxFlat_exeq4")
text = "B
"

[node name="Idk" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_r4iv8")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_ma276")
theme_override_styles/hover = SubResource("StyleBoxFlat_k3l8n")
theme_override_styles/pressed = SubResource("StyleBoxFlat_exeq4")
text = "I don't know"

[node name="Textbox" type="Panel" parent="."]
layout_mode = 0
offset_left = 32.0
offset_right = 1120.0
offset_bottom = 88.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7s8jd")

[node name="Label" type="Label" parent="Textbox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_5363d")
theme_override_font_sizes/font_size = 45
text = "A hungry slime appears!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ticker" type="Label" parent="Textbox"]
layout_mode = 0
offset_left = 1016.0
offset_top = 56.0
offset_right = 1040.0
offset_bottom = 85.0
theme_override_fonts/font = ExtResource("9_ps0do")
theme_override_font_sizes/font_size = 25
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
movie_quit_on_finish = true
libraries = {
"": SubResource("AnimationLibrary_s3ow2")
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 248.0
offset_top = 208.0
offset_right = 1072.0
offset_bottom = 344.0
color = Color(0.827451, 0.784314, 0.666667, 1)

[node name="Trophy" type="Sprite2D" parent="."]
visible = false
position = Vector2(160, 288)
scale = Vector2(0.585739, 0.585739)
texture = ExtResource("14_mstku")

[node name="Label" type="Label" parent="Trophy"]
offset_left = 172.111
offset_top = -110.814
offset_right = 212.111
offset_bottom = -39.8141
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_r4iv8")
theme_override_font_sizes/font_size = 100
text = "Achievement Unlocked"

[node name="Label2" type="Label" parent="Trophy"]
offset_left = 218.208
offset_top = -3.25769
offset_right = 706.208
offset_bottom = 100.742
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_r4iv8")
theme_override_font_sizes/font_size = 60
text = "Defeated Boss"

[connection signal="pressed" from="ActionsPanel/Actions/A" to="." method="_on_a_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/B" to="." method="_on_b_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Idk" to="." method="_on_idk_pressed"]
